show Shady DOM on/off in the test suite title

--- a/core/test/router-dom.spec.html
+++ b/core/test/router-dom.spec.html
@@ -9,7 +9,9 @@
 
 <body>
   <script>
-    describe('Vaadin.Router (DOM)', () => {
+    describe('Vaadin.Router DOM', function() {
+      this.title = this.title + (window.ShadyDOM ? ' (Shady DOM)' : '');
+
       describe('router outlet (basic functionality)', () => {
 
         let router;
