--- a/vaadin-router.html
+++ b/vaadin-router.html
@@ -114,7 +114,7 @@ This program is available under Apache License Version 2.0, available at https:/
         }
         
         this.__router
-          .render(window.location.pathname)
+          .resolve(window.location.pathname)
           .then(page => {
             if (this.__outlet) {
               this.__outlet.parentNode.removeChild(this.__outlet);
