--- a/core/test/router.spec.html
+++ b/core/test/router.spec.html
@@ -15,7 +15,7 @@
   </test-fixture>
 
   <script>
-    describe('Vaadin.Router DOM', function() {
+    describe('Vaadin.Router', function() {
       this.title = this.title + (window.ShadyDOM ? ' (Shady DOM)' : '');
 
       var outlet;
