prepare `lint`, `test` and `size-control` NPM scripts for CI
Both in the router and the router-core packages:
 - `yarn lint` runs a linter and fails the build on errors. The linter configs are `.eslintrc`, `.stylelintrc` and the default `polymer-2` ruleset of the polymer CLI linter.
 - `yarn test:coverage` runs unit tests in a local chrome, reports the test coverage (with istanbul), and fails the build if the coverage is below the threshold set in `wct.conf.js`
 - `yarn test` runs integration tests in all local browsers (via WCT) and fails the build on failure
 - `yarn size-control` calculates the effective library size (minified, gzipped) and fails the build if it exeeds the threshold set in `package.json`.

--- a/core/test/index.coverage.html
+++ b/core/test/index.coverage.html
@@ -13,7 +13,12 @@
   -->
   <script src="../bower_components/web-component-tester/browser.js"></script>
   <script src="test-suites.js"></script>
-  <script src="../dist/umd/vaadin-router-core.js"></script>
+
+  <script src="../dist/test-iife/resolver/path-to-regexp.js"></script>
+  <script src="../dist/test-iife/resolver/matchPath.js"></script>
+  <script src="../dist/test-iife/resolver/matchRoute.js"></script>
+  <script src="../dist/test-iife/resolver/resolver.js"></script>
+  <script src="../dist/test-iife/resolver/generateUrls.js"></script>
 </head>
 
 <body>
@@ -24,7 +29,7 @@
       WCT._config.environmentScripts.push('webcomponentsjs/webcomponents-lite.js');
 
       WCT.loadSuites(
-        window.VaadinRouterCoreSuites.default
+        window.VaadinRouterCoreSuites.coverage
           .reduce(function(suites, suite) {
             return suites.concat(
               suite.match(/\.html$/)
