--- a/vaadin-router-link.html
+++ b/vaadin-router-link.html
@@ -44,7 +44,7 @@ This program is available under Apache License Version 2.0, available at https:/
      * @polymer
      * @customElement
      * @memberof Vaadin
-     * @appliesMixin Vaadin.RouterMixin
+     * @appliesMixin Vaadin.HistoryStateChangeMixin
      * @appliesMixin Polymer.PropertiesMixin
      */
     class RouterLinkElement extends Vaadin.HistoryStateChangeMixin(Polymer.PropertiesMixin(HTMLElement)) {
