--- a/test/vaadin-router.spec.html
+++ b/test/vaadin-router.spec.html
@@ -18,6 +18,13 @@
     </template>
   </test-fixture>
 
+  <test-fixture id="empty">
+    <template>
+      <vaadin-router>
+      </vaadin-router>
+    </template>
+  </test-fixture>
+
   <script>
     describe('<vaadin-router> basic', function() {
       this.title = this.title + (window.ShadyDOM ? ' (Shady DOM)' : '');
@@ -45,6 +52,49 @@
       it('should not render the non-matching component', function() {
         const actual = element.shadowRoot.querySelector('x-user-list');
         expect(actual).to.not.be.ok;
+      });
+
+      it('should not crash when does not have child routes', function(done) {
+        const element = fixture('empty');
+        
+        const step2 = () => {
+          window.history.pushState(null, null, '/');
+          window.requestAnimationFrame(step3);
+        };
+
+        const step3 = () => {
+          expect(element).to.be.ok;
+          // TODO(vlukashov): change when https://github.com/vaadin/vaadin-router/issues/52 is implemented
+          expect(element.__router.__resolver.root.children).to.be.an('array')
+            .that.has.lengthOf(0);
+          done();
+        };
+
+        window.requestAnimationFrame(step2);
+      });
+
+      // currently fails
+      it.skip('should support adding route elements dynamically', function(done) {
+        const route = document.createElement('vaadin-route');
+        route.setAttribute('path', '/admin');
+        route.setAttribute('component', 'x-admin-view');
+
+        const router = fixture('default');
+        router.insertBefore(route, router.firstChild);
+        
+        const step2 = () => {
+          window.history.pushState(null, null, '/admin');
+          window.requestAnimationFrame(step3);
+        };
+
+        const step3 = () => {
+          const actual = element.shadowRoot.querySelector('x-admin-view');
+          expect(element).to.be.ok;
+          expect(actual.localName).to.be.equal('x-admin-view');
+          done();
+        };
+
+        window.requestAnimationFrame(step2);
       });
     });
   </script>
