--- a/core/test/router.spec.html
+++ b/core/test/router.spec.html
@@ -28,31 +28,37 @@
       });
 
       describe('JS API (basic functionality)', () => {
-        it('should have a no-arg constructor', () => {
-          const router = new Vaadin.Router();
-          expect(router).to.be.ok;
+        describe('new Router(outlet?, options?)', () => {
+          it('should work without arguments', () => {
+            const router = new Vaadin.Router();
+            expect(router).to.be.ok;
+          });
+
+          it('should accept a router outlet DOM Node as the 1st argument', () => {
+            const router = new Vaadin.Router(outlet);
+            const actual = router.getOutlet();
+            expect(actual).to.equal(outlet);
+          });
+
+          it('should throw if the first argument is truthy but is not valid a DOM Node', () => {
+            [
+              true,
+              42,
+              '<slot></slot>',
+              [document.body],
+              () => document.body
+            ].forEach(arg => {
+              expect(() => new Vaadin.Router(arg), `${arg}`).to.throw(TypeError);
+            });
+          });
+
+          it('should accept an options object as the 2nd argument', () => {
+            const router = new Vaadin.Router(null, {baseUrl: '/users'});
+            expect(router).to.have.property('baseUrl', '/users');
+          });
         });
 
-        it('should have a 1-arg constructor (outlet DOM Node)', () => {
-          const router = new Vaadin.Router(outlet);
-          expect(router).to.be.ok;
-        });
-
-        it('should have a 2-args constructor (outlet DOM Node, options)', () => {
-          const router = new Vaadin.Router(outlet, {baseUrl: '/users'});
-          expect(router).to.be.ok;
-        });
-
-        it('should have a setter for the routes config', () => {
-          const router = new Vaadin.Router();
-          router.setRoutes([
-            {path: '/', component: 'x-home-view'},
-            {path: '/users', component: 'x-users-view'}
-          ]);
-          expect(router).to.be.ok;
-        });
-
-        describe('render()', () => {
+        describe('router.render(pathname)', () => {
           let router;
           beforeEach(() => {
             router = new Vaadin.Router(outlet);
@@ -76,12 +82,10 @@
           });
 
           it('should return a promise that gets rejected on no-match', (done) => {
-            router.setRoutes();
-            const result = router.render('/');
-            result.then(() => {
-              fail('the render() promise should get rejected');
-            })
-            .catch(() => done());
+            const result = router.render('/path/not/defined');
+            result
+              .then(() => fail('the promise should have been rejected'))
+              .catch(() => done());
           });
 
           it('should create and append a route `component` into the router outlet', async () => {
@@ -100,36 +104,6 @@
             await router.render('/users');
             expect(outlet.children).to.have.lengthOf(1);
             expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-          });
-
-          it('should use exact matching by default', async () => {
-            router.setRoutes([{path: '/users', component: 'x-users-view'}]);
-            let error;
-            try {
-              await router.render('/users/and/some/more/segments');
-            } catch (e) {
-              error = e;
-            }
-            expect(error).to.be.instanceOf(Error);
-            expect(outlet.children).to.have.lengthOf(0);
-          });
-
-          it('should use prefix matching if a route has a truthy `children` property', async () => {
-            router.setRoutes([{path: '/users', children: true, component: 'x-users-view'}]);
-            await router.render('/users/and/some/more/segments');
-            expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-          });
-
-          it('hould use prefix matching if a route has a falsey `children` property', async () => {
-            router.setRoutes([{path: '/users', children: null, component: 'x-users-view'}]);
-            let error;
-            try {
-              await router.render('/users/and/some/more/segments');
-            } catch (e) {
-              error = e;
-            }
-            expect(error).to.be.instanceOf(Error);
-            expect(outlet.children).to.have.lengthOf(0);
           });
         });
       });
