--- a/core/test/router.spec.html
+++ b/core/test/router.spec.html
@@ -59,9 +59,19 @@
         });
 
         describe('router.render(pathname)', () => {
+          const add100msDelay = () => {
+            return new Promise((resolve, reject) => {
+              setTimeout(() => resolve(), 100);
+            });
+          }
+
           let router;
           beforeEach(() => {
             router = new Vaadin.Router(outlet);
+          });
+
+          afterEach(() => {
+            router.unsubscribe();
           });
           
           it('should return a promise that resolves to the router outlet DOM element', async () => {
@@ -104,6 +114,111 @@
             await router.render('/users');
             expect(outlet.children).to.have.lengthOf(1);
             expect(outlet.children[0].tagName).to.match(/x-users-view/i);
+          });
+
+          it('should remove any pre-existing content of the router outlet on no-match', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            await router.render('/');
+
+            await router.render('/path/not/defined').catch(() => {});
+            expect(outlet.children).to.have.lengthOf(0);
+          });
+
+          it('should ignore a successful result of a resolve pass if a new resolve pass is started before the first is completed', async () => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/slow', action: add100msDelay, children: [
+                {path: '/users', component: 'x-users-view'},
+              ]},
+              {path: '/admin', component: 'x-admin-view'},
+            ]);
+            await Promise.all([
+              router.render('/slow/users'), // start the first resolve pass
+              router.render('/admin'), // start the second resolve pass before the first is completed
+            ]);
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
+          });
+
+          it('should ignore an error result of a resolve pass if a new resolve pass is started before the first is completed', async () => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/slow', action: add100msDelay, children: [
+                {path: '/users', component: 'x-users-view'},
+              ]},
+              {path: '/admin', component: 'x-admin-view'},
+            ]);
+            await Promise.all([
+              router.render('/slow/non-existent').catch(() => {}), // start the first resolve pass
+              router.render('/admin'), // start the second resolve pass before the first is completed
+            ]);
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
+          });
+        });
+
+        describe('navigation events', () => {
+          let router;
+          beforeEach(async() => {
+            router = new Vaadin.Router(outlet);
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/admin', component: 'x-admin-view'},
+            ]);
+            await router.render('/admin');
+          });
+
+          afterEach(() => {
+            router.unsubscribe();
+          });
+
+          it('should automatically subscribe to popstate events when created', async() => {
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+
+          it('should handle popstate events as navigation triggers', async() => {
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+
+          it('should unsubscribe from popstate events after an `unsubscribe()` method call', async() => {
+            router.unsubscribe();
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
+          });
+
+          it('should subscribe to popstate events after a `subscribe()` method call', async() => {
+            router.unsubscribe();
+            router.subscribe();
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+
+          it('should handle updates to the routes config as navigation triggers', async() => {
+            router.setRoutes([{path: '/', component: 'x-home-view'}]);
+            await router.ready;
+            expect(outlet.children).to.have.lengthOf(1);
+            expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+
+          it('should ignore navigation events if no routes are set', async() => {
+            router.setRoutes([]);
+            await router.ready;
+
+            window.dispatchEvent(new PopStateEvent('popstate', {state: null}));
+            const fulfilled = sinon.spy();
+            const rejected = sinon.spy();
+            await router.ready.then(fulfilled).catch(rejected);
+            expect(rejected).to.not.have.been.called;
           });
         });
       });
