add an `x-not-found-view` for the demo

--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -13,3 +13,4 @@
 <link rel="import" href="demo-elements/x-home-view.html">
 <link rel="import" href="demo-elements/x-user-list.html">
 <link rel="import" href="demo-elements/x-user-profile.html">
+<link rel="import" href="demo-elements/x-not-found-view.html">
