--- a/demo/core-basic-examples.html
+++ b/demo/core-basic-examples.html
@@ -24,12 +24,13 @@
 
     <h3>Basic</h3>
     <p>Vaadin.Router needs an outlet (a DOM Node to render into), and a routes
-      config. Once created, it automatically listens to `popstate` events on the
-      window and updates the rendered compoenent every time either the location
-      or the routes config changes.</p>
+      config. Once created, it automatically subscribes to `popstate` events on
+      the <code>window</code> and updates the rendered compoenent every time
+      either the location or the routes config changes.</p>
     <p>The routes config maps paths to Web Components. Vaadin.Router goes
-      through the routes until if find the first match, creates an instance
-      of the route component, and renders it into the router outlet.</p>
+      through the routes until it finds the first match, creates an instance
+      of the route component, and inserts it into the router outlet (replacing
+      any pre-existing outlet content).</p>
     <p>The route component can be any Web Component regardless of how it is
       built: vanilla JavaScript, Polymer, Stencil, SkateJS, Angular, Vue, etc</p>
     <vaadin-demo-snippet id="core-basic-examples-1" iframe-src="iframe.html">
@@ -70,7 +71,6 @@
         </script>
       </template>
     </vaadin-demo-snippet>
-  </template>
   <script>
     class CoreBasicExamples extends DemoReadyEventEmitter(ElementDemo(Polymer.Element)) {
       static get is() {
